--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,9 @@ body{
     margin: 0;
     padding: 0;
 }
+*{
+    user-select: none;
+}
 @media (max-width: 600px){
     #title>*{
         font-size:1.9rem;
@@ -81,14 +84,17 @@ body{
     opacity: 0.6;
     user-select: none;
     position: relative;
-    left:-5px;
+    left:5px;
     font-size: 1.6rem;
     text-align: left;
-    width:100%
+    width:100%;
+    transform:rotate(-10deg);
+    transition: 1s;
 }
 .option:hover{
     opacity: 1;
     left:10px;
+    transform:rotate(0deg);
 }
 #fightDisplay{
     display: flex;
@@ -124,4 +130,13 @@ body{
     .scoreCell{
         width:60px
     }
+}
+.bluee{
+    color:blue;
+}
+.redd{
+    color:red;
+}
+.greenn{
+    color:green;
 }
